[fix]:Section3 card problem on mobile 12th

--- a/css/style.css
+++ b/css/style.css
@@ -192,19 +192,19 @@ h2 {
 }
 
 /* Section 3 房间 */
-.section-rooms {
+/* .section-rooms {
     text-align: center;
     padding: 50px;
-    background-color: #f5f5f5; /* 浅灰色背景 */
+    background-color: #f5f5f5; 
 }
 
 .section-rooms h1 {
     font-size: 3em;
     margin-bottom: 40px;
-}
+} */
 
 /* 大屏幕布局 */
-.rooms {
+/* .rooms {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -212,12 +212,12 @@ h2 {
 }
 
 .room-item {
-    width: 20%; /* 三个房间卡片各占30%宽度 */
-    background-color: white; /* 卡片背景色 */
+    width: 20%; 
+    background-color: white; 
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* 卡片阴影 */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -241,17 +241,17 @@ h2 {
     margin: 10px 0;
 }
 
-/* 调整后的小屏幕布局 */
+
 @media (max-width: 768px) {
     .rooms {
-        flex-direction: column; /* 将房间卡片竖直排列 */
+        flex-direction: column;
     }
 
     .room-item {
-        width: 100%; /* 确保每个卡片占据整个屏幕宽度 */
+        width: 100%;
     }
     
-}
+} */
 
 
 /* Section 4 套餐 */
